<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/btn_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <Button
                android:id="@+id/start_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="startService"
                android:text="@string/start_mock_gps"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/stop_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="stopService"
                android:text="@string/stop_mock_gps"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/speed_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:text="@string/speed_format"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:max="200" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="0"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="100"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"
                android:text="200"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manual"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>